--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,5 +38,5 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: Psych Engine Android
-          path: export/final/android/bin/app/build/outputs/apk/*
+          path: export/release/android/bin/app/build/outputs/apk/release/*.apk
           if-no-files-found: error
